# warehouse_ai

./: .devdbrc  .dockerignore  .env.example  .env.production  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  ENHANCED-SHELF-VISUALIZATION-PLAN.md  Makefile  PHARMACEUTICAL-UI-MIGRATION-PLAN.md  README.md  WAREHOUSE-UI-INTEGRATION-PLAN.md  WAREHOUSE_CHAOS_DOCUMENTATION.md  database_documentation.md  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  package-lock.json  pyproject.toml  requirements.txt  test_backend_implementation.py
config/: config.ini
docs/: AI_PO_GENERATION.md  DOCKER_README.md  LOGGING_GUIDE.md
frontend/: .env.example  .prettierrc  Dockerfile  components.json  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: consumption-forecast-chart.tsx  delivery-timeline.tsx  line-chart-5.tsx  medication-history-chart.tsx  plotly-consumption-chart.tsx  statistic-card-8.tsx  stock-level-chart.tsx  time-scale-chart.tsx  time-scale-selector.tsx
frontend/src/hooks/: use-ai-po.ts  use-api.ts  use-toast.ts  useAnalytics.ts  useWarehouseQueries.ts  useWarehouseWebSocket.ts
frontend/src/lib/: api-client.ts  env.ts  utils.ts
frontend/src/pages/: analytics.tsx  create-po-enhanced.tsx  create-po.tsx  dashboard.tsx  inventory.tsx  reports.tsx  (+4 more)
src/: data_loader.py  db_migrations.py  main.py  synthetic_data_generator.py
src/ai_agents/: __init__.py  api_handler.py  compliance_monitor.py  config.py  logger.py  movement_pattern_analyzer.py  optimization_recommender.py  placement_optimizer.py  report_analysis_agent.py  report_insights_agent.py  report_insights_workflow.py  report_recommendations_agent.py  state.py  warehouse_chaos_analyzer.py  warehouse_optimization_workflow.py  workflow.py
src/api/: analytics.py  chat.py  reports.py  routes.py  warehouse_optimization_routes.py  warehouse_routes.py  warehouse_routes_optimized.py  websocket_manager.py  websocket_routes.py
src/services/: analytics_service.py  pdf_generator.py  report_ai_handler.py  reports_service.py  warehouse_optimization_handler.py
src/static/: index.html
src/templates/: create-po.html  medication-detail.html  po-detail.html  purchase-orders.html
src/utils/: cache_manager.py  synthetic_data_generator.py
(+79 files in other folders)
