[project]
name = "hackathon-warehouse-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=37.6.0",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "python-dateutil>=2.9.0.post0",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
]
