[project]
name = "hackathon-warehouse-management"
version = "0.1.0"
description = "FastAPI Warehouse Management System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.35.0",
    "pandas>=2.3.2",
    "python-dateutil>=2.8.2",
    "aiofiles>=23.2.1",
    "faker>=37.6.0",
    "numpy>=2.3.2",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "configparser>=6.0.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
    "langchain-openai>=0.3.32",
    "loguru>=0.7.0",
    "reportlab>=4.4.3",
    "scikit-learn>=1.3.2",
    "langchain-core>=0.3.76",
    "langchain-community>=0.3.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]
